--- a/Anthem/src/app/pages/home/home.component.html
+++ b/Anthem/src/app/pages/home/home.component.html
@@ -1,1 +1,22 @@
-<p>home works!</p>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Anthem</title>
+    <base href="">
+    <link rel="stylesheet" href="./home.component.scss" type="text/scss">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+    <div id="full"></div>
+    <div id="categories"></div>
+    <div id="playing"></div>
+    <div id="overview"></div>
+    <div id="curr_view"></div>
+    <a id="login" routerLink="/login" class="btn btn-link">Sign in</a>
+    <img id="sealy" src="../../../assets/sealy.png">
+</body>
+
+</html>
