--- a/Anthem/src/app/pages/login/login.component.html
+++ b/Anthem/src/app/pages/login/login.component.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Anthem</title>
-  <base href="">
-  <link rel="stylesheet" href="./login.component.scss" type="text/scss">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>Anthem</title>
+    <base href="">
+    <link rel="stylesheet" href="./login.component.scss" type="text/scss">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-	<app-root></app-root>
-	<div id="loginpage">
-    <h1 id="loginh1">Sign in</h1>
-    <p id="username">Username:</p>
-    <input id="username_input" placeholder="Enter username">
-    <p id="password">password:</p>
-    <input type="password" id="password_input" placeholder="Enter password">
-    
-    <a class="login" routerLink='home' routerLinkActive='active'>Login</a>
-  </div>
-  <img id="sealy" src=src/assets/sealy.png>
+    <div id="full"></div>
+    <app-root></app-root>
+    <div id="loginpage">
+        <h1 id="loginh1">Sign in</h1>
+        <p id="username">Username:</p>
+        <input id="username_input" placeholder="Enter username">
+        <p id="password">Password:</p>
+        <input type="password" id="password_input" placeholder="Enter password">
+
+        <a id="login" routerLink="/home" class="btn btn-link">Login</a>
+    </div>
+    <img id="sealy" src="../../../assets/sealy.png">
 </body>
+
 </html>
