made sign up page

--- a/Anthem/src/app/pages/login/login.component.html
+++ b/Anthem/src/app/pages/login/login.component.html
@@ -19,8 +19,10 @@
         <input id="username_input" placeholder="Enter username">
         <p id="password">Password:</p>
         <input type="password" id="password_input" placeholder="Enter password">
+        <p id="sign_up_text">Don't have an account? </p>
 
         <a id="login" routerLink="/home" class="btn btn-link">Login</a>
+        <a id="sign_up" routerLink="/signup" class="btn btn-link">Sign up</a>
     </div>
     <img id="sealy" src="../../../assets/sealy.png">
 </body>
