spotify api implemented

--- a/Anthem/src/app/pages/signup/signup.component.html
+++ b/Anthem/src/app/pages/signup/signup.component.html
@@ -28,8 +28,8 @@
         <p id="email">Email:</p>
         <input type="username_input" id="email_input" placeholder="Enter email" required>
 
-        
-        <input type="submit" id="login">
+        <a id="login" routerLink="/home" class="btn btn-link">Login</a>
+        <input type="submit" id="login" >
     </form>
     <img id="sealy" src="../../../assets/sealy.png">
 </body>
